--- a/index.html
+++ b/index.html
@@ -3,99 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión de Vehículos</title>
+    <title>Proyecto Matriculaciones Front</title>
+    <script src="index.js" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
 <body>
-    <h1>Gestión de Vehículos</h1>
-    <div>
-        <h2>Marcas</h2>
-        <ul id="brands-list"></ul>
+    <div class="container">
+        
+        <h1 class="my-4">Matriculaciones de Vehículos</h1>
+
+        <!-- sm, md, lg, xl, xxl-->
+        <!-- Contenedor del formulario de filtros -->
+        <div id="filtersContainer">
+            <form class="row g-3">
+                <!-- Campo de fecha (Inicio y Fin) -->
+                <div class="col-6 col-md-4 col-lg-3">
+                    <input type="month" class="form-control" id="startDate" name="startDate">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <input type="month" class="form-control" id="endDate" name="endDate">
+                </div>
+
+                <!-- Combo Tipo -->
+                <div class="col-6 col-md-4 col-lg-6">
+                    <select class="form-select" id="cmbType" name="cmbType">
+                        <option selected>Tipo ...</option>
+                        <option value="1">Comustión</option>
+                        <option value="2">Híbrido</option>
+                        <option value="3">Híbrido enchufable</option>
+                        <option value="4">100% Eléctrico</option>
+                    </select>
+                </div>
+
+                <!-- Combo Marca -->
+                <div class="col-6 col-md-4 col-lg-3">
+                    <select class="form-select" id="cmbBrand" name="cmbBrand">
+                        <option selected>Marca ...</option>
+                        <option value="1">Toyota</option>
+                        <option value="2">Ford</option>
+                        <option value="3">Nissan</option>
+                    </select>
+                </div>
+
+                <!-- Combo Modelo -->
+                <div class="col-12 col-md-8 col-lg-4">
+                    <select class="form-select" id="cmbModel" name="cmbModel">
+                        <option selected>Modelo ...</option>
+                        <option value="1">Corolla</option>
+                        <option value="2">Focus</option>
+                        <option value="3">Altima</option>
+                    </select>
+                </div>
+
+                <!-- Combo Provincia -->
+                <div class="col-10 col-md-8 col-lg-4">
+                    <select class="form-select" id="cmbProvince" name="cmbProvince">
+                        <option selected>Provincia ...</option>
+                        <option value="1">Madrid</option>
+                        <option value="2">Málaga</option>
+                        <option value="3">Barcelona</option>
+                    </select>
+                </div>
+
+                <!-- Botón de aplicar filtros -->
+                <div class="col-2 col-md-4 col-lg-1 text-center">
+                    <button type="submit" class="btn btn-primary col-12">Filtrar</button>
+                </div>
+            </form>
+        </div>
     </div>
-    <div>
-        <h2>Modelos</h2>
-        <ul id="models-list"></ul>
-    </div>
-    <div>
-        <h2>Provincias</h2>
-        <ul id="provinces-list"></ul>
-    </div>
-    <div>
-        <h2>Datos</h2>
-        <ul id="data-list"></ul>
-    </div>
-    <script type="module">
-        import { getBrands, getModels, getProvinces, getData } from './services/vehicleRegistrationsService.js';
-
-        const brandsList = document.getElementById('brands-list');
-        const modelsList = document.getElementById('models-list');
-        const provincesList = document.getElementById('provinces-list');
-        const dataList = document.getElementById('data-list');
-
-        // Función para cargar marcas
-        async function loadBrands(id, name) {
-            try {
-                const brands = await getBrands(id, name);
-                brandsList.innerHTML = ''; // Limpiar la lista
-                brands.forEach(brand => {
-                    const li = document.createElement('li');
-                    li.textContent = `ID: ${brand.id}, Nombre: ${brand.name}`;
-                    brandsList.appendChild(li);
-                });
-            } catch (error) {
-                console.error('Error al cargar las marcas:', error);
-            }
-        }
-
-        // Función para cargar modelos
-        async function loadModels(id, name, brandId) {
-            try {
-                const models = await getModels(id, name, brandId);
-                modelsList.innerHTML = ''; // Limpiar la lista
-                models.forEach(model => {
-                    const li = document.createElement('li');
-                    li.textContent = `ID: ${model.id}, Nombre: ${model.name}, Brand ID: ${model.brandId}`;
-                    modelsList.appendChild(li);
-                });
-            } catch (error) {
-                console.error('Error al cargar los modelos:', error);
-            }
-        }
-
-        // Función para cargar provincias
-        async function loadProvinces(id, name) {
-            try {
-                const provinces = await getProvinces(id, name);
-                provincesList.innerHTML = ''; // Limpiar la lista
-                provinces.forEach(province => {
-                    const li = document.createElement('li');
-                    li.textContent = `ID: ${province.id}, Nombre: ${province.name}`;
-                    provincesList.appendChild(li);
-                });
-            } catch (error) {
-                console.error('Error al cargar las provincias:', error);
-            }
-        }
-
-        // Función para cargar datos
-        async function loadData(registrationDateFrom, registrationDateTo, brandId, modelId, provinceId, type) {
-            try {
-                const datas = await getData(registrationDateFrom, registrationDateTo, brandId, modelId, provinceId, type);
-                dataList.innerHTML = ''; // Limpiar la lista
-                datas.forEach(data => {
-                    const li = document.createElement('li');
-                    li.textContent = `Fecha: ${data.date}, Marca: ${data.brandId}, Modelo: ${data.modelId}, Provincia: ${data.provinceId}, Tipo: ${data.type}, Count: ${data.count}`;
-                    dataList.appendChild(li);
-                });
-            } catch (error) {
-                console.error('Error al cargar los datos:', error);
-            }
-        }
-
-        // Cargar datos al cargar la página
-        loadBrands('', 'renault');
-        loadModels('', 'scenic e', '');
-        loadProvinces('', 'MA');
-        loadData('', '', '', 1490, 7, '');
-    </script>
 </body>
 </html>
