--- a/index.html
+++ b/index.html
@@ -3,75 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Matriculaciones Front</title>
-    <script src="index.js" defer></script>
+    <title>Matriculaciones de Vehículos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" defer></script>
+
+    <!--<script src="index.js"></script>
+    <script src="./services/vehicleRegistrationsService.js"></script>-->
 </head>
 <body>
     <div class="container">
-        
         <h1 class="my-4">Matriculaciones de Vehículos</h1>
-
-        <!-- sm, md, lg, xl, xxl-->
-        <!-- Contenedor del formulario de filtros -->
-        <div id="filtersContainer">
-            <form class="row g-3">
-                <!-- Campo de fecha (Inicio y Fin) -->
-                <div class="col-6 col-md-4 col-lg-3">
-                    <input type="month" class="form-control" id="startDate" name="startDate">
-                </div>
-                <div class="col-6 col-md-4 col-lg-3">
-                    <input type="month" class="form-control" id="endDate" name="endDate">
-                </div>
-
-                <!-- Combo Tipo -->
-                <div class="col-6 col-md-4 col-lg-6">
-                    <select class="form-select" id="cmbType" name="cmbType">
-                        <option selected>Tipo ...</option>
-                        <option value="1">Comustión</option>
-                        <option value="2">Híbrido</option>
-                        <option value="3">Híbrido enchufable</option>
-                        <option value="4">100% Eléctrico</option>
-                    </select>
-                </div>
-
-                <!-- Combo Marca -->
-                <div class="col-6 col-md-4 col-lg-3">
-                    <select class="form-select" id="cmbBrand" name="cmbBrand">
-                        <option selected>Marca ...</option>
-                        <option value="1">Toyota</option>
-                        <option value="2">Ford</option>
-                        <option value="3">Nissan</option>
-                    </select>
-                </div>
-
-                <!-- Combo Modelo -->
-                <div class="col-12 col-md-8 col-lg-4">
-                    <select class="form-select" id="cmbModel" name="cmbModel">
-                        <option selected>Modelo ...</option>
-                        <option value="1">Corolla</option>
-                        <option value="2">Focus</option>
-                        <option value="3">Altima</option>
-                    </select>
-                </div>
-
-                <!-- Combo Provincia -->
-                <div class="col-10 col-md-8 col-lg-4">
-                    <select class="form-select" id="cmbProvince" name="cmbProvince">
-                        <option selected>Provincia ...</option>
-                        <option value="1">Madrid</option>
-                        <option value="2">Málaga</option>
-                        <option value="3">Barcelona</option>
-                    </select>
-                </div>
-
-                <!-- Botón de aplicar filtros -->
-                <div class="col-2 col-md-4 col-lg-1 text-center">
-                    <button type="submit" class="btn btn-primary col-12">Filtrar</button>
-                </div>
-            </form>
-        </div>
     </div>
+
+    <!-- BEGIN: Filters -->
+    <div class="container">
+        <form class="row g-3">
+            <div class="col-6 col-md-4 col-lg-3">
+                <input type="month" class="form-control" id="startDate" name="startDate">
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <input type="month" class="form-control" id="endDate" name="endDate">
+            </div>
+            <div class="col-6 col-md-4 col-lg-6">
+                <select class="form-select" id="cmbType" name="cmbType">
+                    <option value="" selected>Tipo ...</option>
+                </select>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+                <select class="form-select" id="cmbBrand" name="cmbBrand">
+                    <option value="" selected>Marca ...</option>
+                </select>
+            </div>
+            <div class="col-12 col-md-8 col-lg-4">
+                <select class="form-select" id="cmbModel" name="cmbModel">
+                    <option value="" selected>Modelo ...</option>
+                </select>
+            </div>
+            <div class="col-10 col-md-8 col-lg-4">
+                <select class="form-select" id="cmbProvince" name="cmbProvince">
+                    <option value="" selected>Provincia ...</option>
+                </select>
+            </div>
+            <div class="col-2 col-md-4 col-lg-1 text-center">
+                <button type="button" id="btnFilter" class="btn btn-primary col-12">Filtrar</button>
+            </div>
+        </form>
+    </div>
+    
+    <!-- END: Filters -->
+
+    <script type="module" src="index.js"></script>
 </body>
+
 </html>
+
+
