--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matriculaciones de Vehículos</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" defer></script>
 
@@ -12,45 +13,55 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="my-4">Matriculaciones de Vehículos</h1>
+        <h3 class="my-4">Matriculaciones de Vehículos</h1>
     </div>
 
     <!-- BEGIN: Filters -->
     <div class="container">
         <form class="row g-3">
-            <div class="col-6 col-md-4 col-lg-3">
-                <input type="month" class="form-control" id="startDate" name="startDate">
+            <div class="col-6 col-md-4 col-xl-2">
+                <input type="month" class="form-control form-control-sm" id="startDate" name="startDate">
             </div>
-            <div class="col-6 col-md-4 col-lg-3">
-                <input type="month" class="form-control" id="endDate" name="endDate">
+            <div class="col-6 col-md-4 col-xl-2">
+                <input type="month" class="form-control form-control-sm" id="endDate" name="endDate">
             </div>
-            <div class="col-6 col-md-4 col-lg-6">
-                <select class="form-select" id="cmbType" name="cmbType">
+            <div class="col-6 col-md-4 col-xl-2">
+                <select class="form-select form-select-sm" id="cmbType" name="cmbType">
                     <option value="" selected>Tipo ...</option>
                 </select>
             </div>
-            <div class="col-6 col-md-4 col-lg-3">
-                <select class="form-select" id="cmbBrand" name="cmbBrand">
+            <div class="col-6 col-md-4 col-xl-2">
+                <select class="form-select form-select-sm" id="cmbBrand" name="cmbBrand">
                     <option value="" selected>Marca ...</option>
                 </select>
             </div>
-            <div class="col-12 col-md-8 col-lg-4">
-                <select class="form-select" id="cmbModel" name="cmbModel">
+            <div class="col-8 col-md-6 col-xl-3">
+                <select class="form-select form-select-sm" id="cmbModel" name="cmbModel">
                     <option value="" selected>Modelo ...</option>
                 </select>
             </div>
-            <div class="col-10 col-md-8 col-lg-4">
-                <select class="form-select" id="cmbProvince" name="cmbProvince">
+            <div class="col-4 col-md-2 col-xl-1">
+                <select class="form-select form-select-sm" id="cmbProvince" name="cmbProvince">
                     <option value="" selected>Provincia ...</option>
                 </select>
-            </div>
-            <div class="col-2 col-md-4 col-lg-1 text-center">
-                <button type="button" id="btnFilter" class="btn btn-primary col-12">Filtrar</button>
             </div>
         </form>
     </div>
     
     <!-- END: Filters -->
+
+    <!-- BEGIN: DASHBOARD -->
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-xl-6">
+                <canvas id="vehiclesSoldType"></canvas>
+            </div>
+            <div class="col-12 col-xl-6">
+                <canvas id="vehiclesSoldStackedType"></canvas>
+            </div>
+        </div>
+    </div>
+    <!-- END: DASHBOARD -->
 
     <script type="module" src="index.js"></script>
 </body>
