--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matriculaciones de Vehículos</title>
+    <link href="styles.css" rel="stylesheet">
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" defer></script>
@@ -53,11 +55,18 @@
     <!-- BEGIN: DASHBOARD -->
     <div class="container">
         <div class="row">
-            <div class="col-12 col-xl-6">
+            <div class="col-12 col-xl-6 chart">
                 <canvas id="vehiclesSoldType"></canvas>
             </div>
-            <div class="col-12 col-xl-6">
+            <div class="col-12 col-xl-6 chart">
                 <canvas id="vehiclesSoldStackedType"></canvas>
+            </div>
+            
+            <div class="col-6 col-xl-6 chart">
+                <canvas id="vehiclesTypes"></canvas>
+            </div>
+            <div class="col-6 col-xl-6 chart">
+                <canvas id="vehiclesBrands"></canvas>
             </div>
         </div>
     </div>
