--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matriculaciones de Vehículos</title>
-    <link href="styles.css" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <link href="styles.css" rel="stylesheet">
 
     <!--<script src="index.js"></script>
     <script src="./services/vehicleRegistrationsService.js"></script>-->
 </head>
 <body>
     <div class="container">
-        <h3 class="my-4">Matriculaciones de Vehículos</h1>
+        <h3 class="my-4">Matriculaciones de Vehículos</h3>
     </div>
 
     <!-- BEGIN: Filters -->
-    <div class="container">
-        <form class="row g-3">
+    <section class="container filters-section">
+        <form class="row g-3" aria-label="Filtros de búsqueda">
             <div class="col-6 col-md-4 col-xl-2">
                 <input type="month" class="form-control form-control-sm" id="startDate" name="startDate">
             </div>
@@ -48,25 +48,33 @@
                 </select>
             </div>
         </form>
-    </div>
+    </section>
     
     <!-- END: Filters -->
 
     <!-- BEGIN: DASHBOARD -->
     <div class="container">
         <div class="row">
-            <div class="col-12 col-xl-6 chart">
-                <canvas id="vehiclesSoldType"></canvas>
+            <div class="col-12 col-xl-6">
+                <div class="chart">
+                    <canvas id="vehiclesSoldType"></canvas>
+                </div>
             </div>
-            <div class="col-12 col-xl-6 chart">
-                <canvas id="vehiclesSoldStackedType"></canvas>
+            <div class="col-12 col-xl-6">
+                <div class="chart">
+                    <canvas id="vehiclesSoldStackedType"></canvas>
+                </div>
             </div>
             
-            <div class="col-6 col-xl-6 chart">
-                <canvas id="vehiclesTypes"></canvas>
+            <div class="col-6 col-xl-6">
+                <div class="chart">
+                    <canvas id="vehiclesTypes"></canvas>
+                </div>
             </div>
-            <div class="col-6 col-xl-6 chart">
-                <canvas id="vehiclesBrands"></canvas>
+            <div class="col-6 col-xl-6">
+                <div class="chart">
+                    <canvas id="vehiclesBrands"></canvas>
+                </div>
             </div>
         </div>
     </div>
