se quita el footer

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
     </div>
     <!-- END: DASHBOARD -->
 
-    <div class="hidden-footer"></div>
+    <!--<div class="hidden-footer"></div>
 
     <footer class="fixed-footer">
         <div class="container text-center">
             <p>Footer</p>
         </div>
-    </footer>
+    </footer>-->
 
     <script type="module" src="index.js"></script>
 </body>
