--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" defer></script>
     <link href="styles.css" rel="stylesheet">
 
+    <script src="services/dashboardServices.js"></script>
+    <script src="services/localVehicleRegistrationsService.js"></script>
+    <script src="services/vehicleRegistrationsService.js"></script>
+    
+    <script src="models/brandModel.js"></script>
+    <script src="models/dataModel.js"></script>
+    <script src="models/modelModel.js"></script>
+    <script src="models/provinceModel.js"></script>
+    <script src="models/typesModel.js"></script>
+    <script src="models/constants/colors.js"></script>
+
     <!--<script src="index.js"></script>
     <script src="./services/vehicleRegistrationsService.js"></script>-->
 </head>
