--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" defer></script>
     <link href="styles.css" rel="stylesheet">
 
-    <script src="services/dashboardServices.js"></script>
+    <!--<script src="services/dashboardServices.js"></script>
     <script src="services/localVehicleRegistrationsService.js"></script>
     <script src="services/vehicleRegistrationsService.js"></script>
     
@@ -19,37 +19,37 @@
     <script src="models/modelModel.js"></script>
     <script src="models/provinceModel.js"></script>
     <script src="models/typesModel.js"></script>
-    <script src="models/constants/colors.js"></script>
+    <script src="models/constants/colors.js"></script>-->
 
     <!--<script src="index.js"></script>
     <script src="./services/vehicleRegistrationsService.js"></script>-->
 </head>
 <body>
     <header class="fixed-header">
-        <section class="container">
+        <section class="container filters-section">
             <form class="row g-3" aria-label="Filtros de búsqueda">
-                <div class="col-6 col-md-4 col-xl-2">
+                <div class="col-4 col-md-2 col-xl-2">
                     <input type="month" class="form-control form-control-sm" id="startDate" name="startDate">
                 </div>
-                <div class="col-6 col-md-4 col-xl-2">
+                <div class="col-4 col-md-2 col-xl-2">
                     <input type="month" class="form-control form-control-sm" id="endDate" name="endDate">
                 </div>
-                <div class="col-6 col-md-4 col-xl-2">
+                <div class="col-4 col-md-2 col-xl-2">
                     <select class="form-select form-select-sm" id="cmbType" name="cmbType">
                         <option value="" selected>Tipo ...</option>
                     </select>
                 </div>
-                <div class="col-6 col-md-4 col-xl-2">
+                <div class="col-4 col-md-2 col-xl-2">
                     <select class="form-select form-select-sm" id="cmbBrand" name="cmbBrand">
                         <option value="" selected>Marca ...</option>
                     </select>
                 </div>
-                <div class="col-8 col-md-6 col-xl-3">
+                <div class="col-6 col-md-3 col-xl-3">
                     <select class="form-select form-select-sm" id="cmbModel" name="cmbModel">
                         <option value="" selected>Modelo ...</option>
                     </select>
                 </div>
-                <div class="col-4 col-md-2 col-xl-1">
+                <div class="col-2 col-md-1 col-xl-1">
                     <select class="form-select form-select-sm" id="cmbProvince" name="cmbProvince">
                         <option value="" selected>Provincia ...</option>
                     </select>
