se añade velo de carga y se corrige la lectura de indexdb

--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
         </div>
     </footer>-->
 
+    <div id="loadingScreen">
+        <div class="loading">
+            <div class="spinner"></div>
+            <h4>Cargando</h4>
+        </div>
+    </div>
+
     <script type="module" src="index.js"></script>
 </body>
 
