Se añaden nuevos gráficos

--- a/index.html
+++ b/index.html
@@ -73,21 +73,28 @@
                     <canvas id="vehiclesSoldStackedType"></canvas>
                 </div>
             </div>
-            
-            <div class="col-12 col-md-6 col-xl-6">
-                <div class="chart">
-                    <canvas id="vehiclesTypes"></canvas>
-                </div>
-            </div>
-            <div class="col12 col-md-6 col-xl-6">
+
+            <div class="col-12 col-xl-6">
                 <div class="chart">
                     <canvas id="vehiclesBrands"></canvas>
                 </div>
             </div>
 
-            <div class="col-12">
+            <div class="col-12 col-xl-6">
+                <div class="chart">
+                    <canvas id="vehiclesStackedBrands"></canvas>
+                </div>
+            </div>
+
+            <div class="col-12 col-xl-6">
                 <div class="chart">
                     <canvas id="vehiclesModels"></canvas>
+                </div>
+            </div>
+
+            <div class="col-12 col-xl-6">
+                <div class="chart">
+                    <canvas id="vehiclesStackedModels"></canvas>
                 </div>
             </div>
         </div>
