--- a/index.html
+++ b/index.html
@@ -5,24 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matriculaciones de Vehículos</title>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-geo"></script>
+    <link href="./models/others/esp.json">
     <link href="styles.css" rel="stylesheet">
-
-    <!--<script src="services/dashboardServices.js"></script>
-    <script src="services/localVehicleRegistrationsService.js"></script>
-    <script src="services/vehicleRegistrationsService.js"></script>
-    
-    <script src="models/brandModel.js"></script>
-    <script src="models/dataModel.js"></script>
-    <script src="models/modelModel.js"></script>
-    <script src="models/provinceModel.js"></script>
-    <script src="models/typesModel.js"></script>
-    <script src="models/constants/colors.js"></script>-->
-
-    <!--<script src="index.js"></script>
-    <script src="./services/vehicleRegistrationsService.js"></script>-->
 </head>
 <body>
     <header class="fixed-header">
@@ -95,6 +83,12 @@
             <div class="col-12 col-xl-6">
                 <div class="chart">
                     <canvas id="vehiclesStackedModels"></canvas>
+                </div>
+            </div>
+
+            <div class="col-12">
+                <div class="chart chart-xl">
+                    <canvas id="vehiclesMap"></canvas>
                 </div>
             </div>
         </div>
