--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-geo"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
     <link href="./models/others/esp.json">
     <link href="styles.css" rel="stylesheet">
 </head>
@@ -102,6 +104,10 @@
             <p>Footer</p>
         </div>
     </footer>-->
+
+    <div class="refreshDashboard">
+        <i id="btnRefreshDashboard" class="fas fa-sync-alt"></i>
+    </div>
 
     <div id="loadingScreen">
         <div class="loading">
