--- a/registration.html
+++ b/registration.html
@@ -27,58 +27,64 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12">
-                                <h5>Sinónimos</h5>
+                                <h5>Búsqueda de Modelos</h5>
                             </div>
                             <div class="col-12 mb-2">
                                 <form>
                                     <div class="row">
-                                        <div class="col-6 col-md-8">
+                                        <div class="col-9">
                                             <input class="form-control" id="txtModel" placeholder="Modelo...">
                                         </div>
-                                        <div class="col-3 col-md-2">
+                                        <div class="col-3">
                                             <button id="btnSearch" type="button" class="btn btn-primary btn-sm col-12" disabled>Buscar</button>
-                                        </div>
-                                        <div class="col-3 col-md-2">
-                                            <button id="btnSave" type="button" class="btn btn-primary btn-sm col-12" disabled>Guardar</button>
                                         </div>
                                     </div>
                                 </form>
                             </div>
                             <div class="col-12">
-                                <div id="tbSynonyms"></div>
+                                <div id="tbSynonyms" class="tablegrid"></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-lg-6">
                 <div class="box">
                     <div class="container">
                         <div class="row">
                             <div class="col-12">
-                                <h5>Carga de matriculaciones</h5>
+                                <h5>Sinónimos</h5>
                             </div>
-                            <div class="col-12 col-md-8 col-xl-10">
+                            <div class="col-4">
+                                <input class="form-control" id="txtFather" placeholder="Id (ej. '8')">
+                            </div>
+                            <div class="col-8 mb-2">
+                                <input class="form-control" id="txtSynonyms" placeholder="Sinónimos (ej. '10, 12, 15')">
+                            </div>
+                            
+                            <div class="col-12">
+                                <button id="btnSynonymsSave" type="button" class="btn btn-primary btn-sm col-12" disabled>Guardar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-6">
+                <div class="box">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <h5>Opciones de matriculaciones</h5>
+                            </div>
+                            <div class="col-12 mb-2">
                                 <input class="form-control form-control-sm" id="frmFileLoad" type="file" accept=".zip">
                             </div>
-                            <div class="col-12 col-md-4 col-xl-2">
+                            <div class="col-12 col-md-6 mb-2">
                                 <button id="btnLoad" type="button" class="btn btn-primary btn-sm col-12" disabled>Cargar</button>
                             </div>
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
-
-            <div class="col-12 col-md-6">
-                <div class="box">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-12">
-                                <h5>Opciones</h5>
-                            </div>
-                            <div class="col-12 col-md-4">
+                            <div class="col-12 col-md-6">
                                 <button id="btnOptimize" type="button" class="btn btn-primary btn-sm col-12">Optimizar</button>
                             </div>
                         </div>
