--- a/admin-brands.html
+++ b/admin-brands.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matriculaciones de Vehículos</title>
+    <title>Matriculaciones de Vehículos - Marcas</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" defer></script>
@@ -27,13 +27,13 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12">
-                                <h5>Búsqueda de Modelos</h5>
+                                <h5>Búsqueda de Marcas</h5>
                             </div>
                             <div class="col-12 mb-2">
                                 <form>
                                     <div class="row">
                                         <div class="col-9">
-                                            <input class="form-control" id="txtModel" placeholder="Modelo...">
+                                            <input class="form-control" id="txtBrand" placeholder="Marca...">
                                         </div>
                                         <div class="col-3">
                                             <button id="btnSearch" type="button" class="btn btn-primary btn-sm col-12" disabled>Buscar</button>
@@ -54,7 +54,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12">
-                                <h5>Sinónimos</h5>
+                                <h5>Sinónimos de Marcas</h5>
                             </div>
                             <div class="col-4">
                                 <input class="form-control" id="txtFather" placeholder="Id (ej. '8')">
@@ -102,5 +102,5 @@
         </div>
     </div>
      
-    <script type="module" src="registration.js"></script>
+    <script type="module" src="admin-brands.js"></script>
 </body>
