--- a/annuals.html
+++ b/annuals.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datos anuales</title>
 
-    <link href="styles.css" rel="stylesheet">
+    <link href="../styles/styles.css" rel="stylesheet">
     <script src="./annuals.js" type="module" defer></script>
 </head>
 </body>
