--- a/propulsion.html
+++ b/propulsion.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ránking de matriculaciones</title>
 
-    <link href="styles.css" rel="stylesheet">
+    <link href="../styles/styles.css" rel="stylesheet">
     <script src="propulsion.js" type="module" defer></script>
 </head>
 <body>
