se actualiza el estilo de la pagina

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
 
     <!-- Contenedor del filtro (inicialmente oculto) -->
-    <div id="filterSection" class="container-fluid bg-light p-3">
+    <div id="filterSection" class="container-fluid p-3 filterSection">
         <div class="row g-3">
             <!-- Fecha Desde -->
             <div class="col-6 col-md-3 col-xl-2 mb-3">
