ajustes de estilo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </li>
                     </ul>
                     <!-- Contenedor para posicionar correctamente el icono de filtros -->
-                    <div id="btnFilter" class="d-flex ms-auto d-none" onclick="toggleFilterSection()" style="cursor: pointer;">
+                    <div id="btnFilter" class="btnFilter navbar-nav d-flex ms-auto" onclick="toggleFilterSection()" style="cursor: pointer;">
                         <div class="bi bi-funnel"> Filtrar</div>
                     </div>
                 </div>
