avances notorios en gráficos de tipos de motor

--- a/propulsion.html
+++ b/propulsion.html
@@ -34,7 +34,7 @@
 
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h5>Reparto por tipos de propulsión</h5>
+                    <h5>Reparto total por tipos de motor</h5>
                     <div class="chart-container-medium">
                         <canvas id="motorTypesPie"></canvas>
                     </div>
@@ -43,10 +43,13 @@
 
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h5>Diferenciales anuales por propulsión</h5>
+                    <h5>Comparativas anuales por tipo de motor</h5>
                     <div class="chart-container-medium">
                         <canvas id="motorTypesAnnualDiff"></canvas>
                     </div>
+                    <!--<div class="chart-container-small">
+                        <canvas id="motorTypesAnnualDiff100"></canvas>
+                    </div>-->
                 </div>
             </div>
 
