--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
     <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js" defer></script>
     <script src="index.js" type="module" defer></script>
 
-    
-
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-md headerSection">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Metricars</a>
+                <a class="navbar-brand" href="#" onclick="goHome();">Metricars</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
