--- a/annuals.html
+++ b/annuals.html
@@ -11,6 +11,7 @@
 </body>
     <div>
         <h3 class="text-center">Comparaciones anuales</h3>
+        <h5 class="text-center">Observa y compara la evolución cada mes y cada año</h4>
         
         <div class="row mt-2">
             <div class="col-12 col-lg-6 text-center">
