--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js" defer></script>
     <script src="index.js" type="module" defer></script>
 
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="d4471d89-a741-4be5-8382-995f59418eae" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 <body>
     <header>
@@ -123,3 +124,4 @@
     </div>
 </body>
 </html>
+
