--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <script src="index.js" type="module" defer></script>
 
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="d4471d89-a741-4be5-8382-995f59418eae" data-blockingmode="auto" type="text/javascript"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6MM8X6NX7C"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-6MM8X6NX7C');
+    </script>
 </head>
 <body>
     <header>
