--- a/propulsion.html
+++ b/propulsion.html
@@ -7,6 +7,16 @@
 
     <link href="../styles/styles.css" rel="stylesheet">
     <script src="propulsion.js" type="module" defer></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6MM8X6NX7C"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-6MM8X6NX7C');
+    </script>
 </head>
 <body>
     <div>
