--- a/ranking.html
+++ b/ranking.html
@@ -7,6 +7,15 @@
 
     <link href="styles/styles.css" rel="stylesheet">
     <script src="ranking.js" type="module" defer></script>
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6MM8X6NX7C"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-6MM8X6NX7C');
+    </script>
 </head>
 <body>
 
