--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <nav class="navbar navbar-expand-md headerSection">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#" onclick="loadPage('home.html','home.js');">
-                    <img src="Images/logo_light.svg" alt="Logo Metricars" width="80">
+                    <img src="images/logo_light.svg" alt="Logo Metricars" width="80">
                     Metricars</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
