se añade loading al aplicar filtros

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
         <div class="spinner"></div>
         <span><h4>Cargando</h4></span>
     </div>
+    <div id=loadingFilter class="loadingFilter">
+        <div class="spinner"></div>
+        <span><h4>Cargando</h4></span>
+    </div>
 </body>
 </html>
 
