--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
         <div class="row g-3">
             <!-- Fecha Desde -->
             <div class="col-6 col-md-3 col-xl-2 mb-3">
-                <label for="dateFrom" class="form-label">Fecha Desde</label>
+                <label for="dateFrom" class="form-label">Desde</label>
                 <input type="month" class="datefilter form-control" id="dateFrom">
             </div>
     
             <!-- Fecha Hasta -->
             <div class="col-6 col-md-3 col-xl-2 mb-3">
-                <label for="dateTo" class="form-label">Fecha Hasta</label>
+                <label for="dateTo" class="form-label">Hasta</label>
                 <input type="month" class="datefilter form-control" id="dateTo">
             </div>
         </div>
