Se cambian los titulos de las pestañas

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="loadPage('ranking.html','ranking.js')">Ranking</a>
+                            <a class="nav-link" href="#" onclick="loadPage('ranking.html','ranking.js')">Marcas y modelos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="loadPage('annuals.html', 'annuals.js')">Anuales</a>
+                            <a class="nav-link" href="#" onclick="loadPage('annuals.html', 'annuals.js')">Métricas anuales</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="loadPage('propulsion.html','propulsion.js')">Tipos de motor</a>
+                            <a class="nav-link" href="#" onclick="loadPage('propulsion.html','propulsion.js')">Por tipos de motor</a>
                         </li>
                     </ul>
 
