--- a/annuals.html
+++ b/annuals.html
@@ -19,13 +19,13 @@
 </head>
 </body>
     <div>
-        <h3 class="text-center">Comparaciones anuales</h3>
-        <h5 class="text-center">Observa y compara la evolución cada mes y cada año</h4>
+        <h5 class="text-center mt-2">Comparaciones anuales</h5>
+        <h6 class="text-center">Observa y compara la evolución cada mes y cada año</h6>
         
         <div class="row mt-2">
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h5>Matriculaciones por Año</h5>
+                    <h6>Matriculaciones por Año</h6>
                     <div class="chart-container-medium">
                         <canvas id="annuals"></canvas>
                     </div>
@@ -34,7 +34,7 @@
 
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h5>Matriculaciones por Año (Acumuladas)</h5>
+                    <h6>Matriculaciones por Año (Acumuladas)</h6>
                     <div class="chart-container-medium">
                         <canvas id="annualsacc"></canvas>
                     </div>
@@ -43,7 +43,7 @@
 
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h5>Diferenciales por Año anterior</h5>
+                    <h6>Diferenciales por Año anterior</h6>
                     <div class="chart-container-small">
                         <canvas id="annualsdiff"></canvas>
                     </div>
@@ -52,7 +52,7 @@
 
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h5>Diferenciales por Año anterior (Acumuladas)</h5>
+                    <h6>Diferenciales por Año anterior (Acumuladas)</h6>
                     <div class="chart-container-small">
                         <canvas id="annualsaccdiff"></canvas>
                     </div>
