--- a/home.html
+++ b/home.html
@@ -19,8 +19,8 @@
 </head>
 <body>
     <div>
-        <h3 class="text-center">El pulso del mercado de vehículos en España, al instante</h3>
-        <h5 class="text-center">Explora los datos de matriculaciones en España con gráficos dinámicos e interactivos</h4>
+        <h5 class="text-center mt-2">El pulso del mercado de vehículos en España, al instante</h5>
+        <h6 class="text-center">Explora los datos de matriculaciones en España con gráficos dinámicos e interactivos</h6>
         
         <div class="row mt-2">
             <div class="col-12 col-lg-6 text-center">
