--- a/propulsion.html
+++ b/propulsion.html
@@ -20,13 +20,13 @@
 </head>
 <body>
     <div>
-        <h3 class="text-center">Matriculaciones por tipos de motor</h3>
-        <h5 class="text-center">Evolución de los tipos de motor de los vehículos</h4>
+        <h5 class="text-center mt-2">Matriculaciones por tipos de motor</h5>
+        <h6 class="text-center">Evolución de los tipos de motor de los vehículos</h6>
         
         <div class="row mt-2">
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h5>Acumulado de matriculaciones</h5>
+                    <h6>Acumulado de matriculaciones</h6>
                     <div class="chart-container-medium">
                         <canvas id="motorTypesAcc"></canvas>
                     </div>
@@ -34,7 +34,7 @@
             </div>
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h5>Proporción por tipo de motor (%)</h5>
+                    <h6>Proporción por tipo de motor (%)</h6>
                     <div class="chart-container-medium">
                         <canvas id="motorTypes100"></canvas>
                     </div>
@@ -43,7 +43,7 @@
 
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h5>Comparativas anuales por tipo de motor</h5>
+                    <h6>Comparativas anuales por tipo de motor</h6>
                     <div class="chart-container-small">
                         <canvas id="motorTypesAnnualDiff"></canvas>
                     </div>
