--- a/ranking.html
+++ b/ranking.html
@@ -21,13 +21,13 @@
 
 </body>
     <div>
-        <h3 class="text-center">Ranking de matriculaciones</h3>
-        <h5 class="text-center">Las marcas y modelos más populares del mercado</h4>
+        <h5 class="text-center mt-2">Ranking de matriculaciones</h5>
+        <h6 class="text-center">Las marcas y modelos más populares del mercado</h6>
         
         <div class="row mt-2">
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h5>Top matriculaciones por Marcas</h5>
+                    <h6>Top matriculaciones por Marcas</h6>
                     <div class="chart-container-large">
                         <canvas id="topBrands"></canvas>
                     </div>
@@ -35,7 +35,7 @@
             </div>
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h5>Top matriculaciones por Modelos</h5>
+                    <h6>Top matriculaciones por Modelos</h6>
                     <div class="chart-container-large">
                         <canvas id="topModels"></canvas>
                     </div>
